--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ LETTER TO RISHIKA <3 💗
 <!-- ================= PHOTO BUBBLE 1 ================= -->
 <!-- REPLACE IMAGE LINK BELOW WITH HER PHOTO -->
 <div class="row">
-  <img class="circle-img" src="C:\Users\USER\Downloads\pic1.jpeg.jpeg">
+  <img class="circle-img" src="pic1.jpeg.jpeg">
 
   <div class="bubble poem">
     i realized this a while ago <br><br>
@@ -137,11 +137,11 @@ LETTER TO RISHIKA <3 💗
 <!-- ================= PHOTO BUBBLE 3 ================= -->
 <!-- REPLACE IMAGE LINK BELOW WITH HER PHOTO -->
 <div class="row">
-  <img class="circle-img" src="C:\Users\USER\Pictures\Screenshots\Screenshot 2026-02-12 232349.png">
+  <img class="circle-img" src="WhatsApp Image 2026-02-12 at 11.15.18 PM.jpeg">
 
   <div class="bubble">
     as lucky as i am , you too to get such a hot and beautiful and intelligent and amazing jawline- friend like me 😌
-<img class="circle-img" src="C:\Users\USER\Downloads\captured_image.png">
+<img class="captured_image.png">
 
 
   </div>
@@ -151,7 +151,7 @@ LETTER TO RISHIKA <3 💗
 <!-- ================= PHOTO BUBBLE 4 ================= -->
 <!-- REPLACE IMAGE LINK BELOW WITH HER PHOTO -->
 <div class="row reverse">
-  <img class="circle-img" src="C:\Users\USER\Downloads\WhatsApp Image 2026-02-12 at 11.15.19 PM (1).jpeg">
+  <img class="circle-img" src="WhatsApp Image 2026-02-12 at 11.15.19 PM (1).jpeg">
 
   <div class="bubble poem final">
     so to the girl who considered me as family<br>
@@ -190,4 +190,5 @@ setInterval(createFlower, 900);
 
 </html>
 tml>
+
 
