--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@ LETTER TO RISHIKA <3 💗
     because ill be in the third or fourth bench <br>
     unaware of the idiot in the first one
   </div>
+  <img class="circle-img" src="WhatsApp Image 2026-02-12 at 10.21.54 PM.jpeg">
+
 </div>
 
 
 <!-- ================= PHOTO BUBBLE 2 ================= -->
 <!-- REPLACE IMAGE LINK BELOW WITH HER PHOTO -->
 <div class="row reverse">
-  <img class="circle-img" src="C:\Users\USER\Downloads\WhatsApp Image 2026-02-12 at 11.15.18 PM.jpeg">
+  <img class="circle-img" src="WhatsApp Image 2026-02-12 at 10.20.38 PM.jpeg">
 
   <div class="bubble poem">
     if i could <br><br>
@@ -141,7 +143,7 @@ LETTER TO RISHIKA <3 💗
 
   <div class="bubble">
     as lucky as i am , you too to get such a hot and beautiful and intelligent and amazing jawline- friend like me 😌
-<img class="captured_image.png">
+<img class="captured_image.jpeg">
 
 
   </div>
@@ -190,5 +192,6 @@ setInterval(createFlower, 900);
 
 </html>
 tml>
+
 
 
