--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@ LETTER TO RISHIKA <3 💗
     because ill be in the third or fourth bench <br>
     unaware of the idiot in the first one
   </div>
-  <img class="circle-img" src="WhatsApp Image 2026-02-12 at 10.21.54 PM.jpeg">
 
 </div>
 
@@ -143,7 +142,7 @@ LETTER TO RISHIKA <3 💗
 
   <div class="bubble">
     as lucky as i am , you too to get such a hot and beautiful and intelligent and amazing jawline- friend like me 😌
-<img class="captured_image.jpeg">
+<img class="WhatsApp Image 2026-02-13 at 12.24.46 AM.jpeg">
 
 
   </div>
@@ -192,6 +191,7 @@ setInterval(createFlower, 900);
 
 </html>
 tml>
+
 
 
 
