--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@ LETTER TO RISHIKA <3 💗
   <img class="circle-img" src="WhatsApp Image 2026-02-12 at 11.15.18 PM.jpeg">
 
   <div class="bubble">
-    as lucky as i am , you too to get such a hot and beautiful and intelligent and amazing jawline- friend like me 😌
-<img class="WhatsApp Image 2026-02-13 at 12.24.46 AM.jpeg">
+    as lucky as i am , you too to get such a hot and beautiful and intelligent and amazing jawline- friend like me 
 
 
   </div>
+  <img class="WhatsApp Image 2026-02-13 at 12.24.46 AM.jpeg">
 </div>
 
 
@@ -191,6 +191,7 @@ setInterval(createFlower, 900);
 
 </html>
 tml>
+
 
 
 
